--- a/data/data_pengunjung.html
+++ b/data/data_pengunjung.html
@@ -293,7 +293,7 @@
         <div class="modal-body">
           <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=TransFit" alt="QR Code"
             class="img-fluid" />
-          <p class="mt-2 mb-0">Scan untuk info lebih lanjut</p>
+          <p class="mt-2 mb-0">Scan untuk melakukan Check-in</p>
         </div>
       </div>
     </div>
