--- a/data/data_inventaris.html
+++ b/data/data_inventaris.html
@@ -177,7 +177,7 @@
           <img src="../assets/icon/dumbell.svg" width="20" class="me-2">
           <span class="fw-bold">Data Inventaris</span>
         </a>
-        <a href="logout.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
+        <a href="../auth/login.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
           <img src="../assets/icon/LogoutIcon.svg" width="20" class="me-2">
           <span class="sidebar-label" style="font-size: 14px; font-weight: 900;">Keluar</span>
         </a>
@@ -199,7 +199,7 @@
       <img src="../assets/icon/dumbell.svg" width="35" class="me-2">
       <span class="sidebar-label fw-bold" style="font-size: 14px;">Data Inventaris</span>
     </a>
-    <a href="logout.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
+    <a href="../auth/login.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
       <img src="../assets/icon/LogoutIcon.svg" width="35" class="me-2">
       <span class="sidebar-label fw-bold" style="font-size: 14px;">Keluar</span>
     </a>
