--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <img src="assets/icon/dumbell.svg" width="20" class="me-2">
                     <span class="fw-bold">Data Inventaris</span>
                 </a>
-                  <a href="logout.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
+                  <a href="auth/login.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
                     <img src="assets/icon/LogoutIcon.svg" width="20" class="me-2">
                     <span class="sidebar-label" style="font-size: 14px; font-weight: 900;">Keluar</span>
                 </a>
@@ -176,7 +176,7 @@
                     <img src="assets/icon/dumbell.svg" width="35" class="me-2">
                     <span class="sidebar-label" style="font-size: 14px; font-weight: 900; ">Data Inventaris</span>
                 </a>
-                <a href="logout.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
+                <a href="auth/login.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
                     <img src="assets/icon/LogoutIcon.svg" width="35" class="me-2">
                     <span class="sidebar-label" style="font-size: 14px; font-weight: 900;">Keluar</span>
                 </a>
