Draft Final (Without DB)

--- a/auth/login.html
+++ b/auth/login.html
@@ -20,7 +20,7 @@
 
       <form id="loginForm">
         <div class="mb-3">
-          <label for="username" class="form-label" style="color: #2B2A64; font-size: 12px;">Nama</label>
+          <label for="username" class="form-label" style="color: #2B2A64; font-size: 12px;">Username</label>
           <input type="text" class="form-control" id="username" required>
         </div>
         <div class="mb-2">
@@ -30,7 +30,7 @@
         <div class="mb-3 text-end">
           <a href="#" class="text-decoration-none small" style="color: #2B2A64; font-size: 12px;">Lupa Password?</a>
         </div>
-        <button type="submit" class="btn btn-dark w-100 mb-2" onclick="window.location.href='../index.html'" style="background-color: #2B2A64;">Masuk</button>
+       <button type="submit" class="btn btn-dark w-100 mb-2" style="background-color: #2B2A64;">Masuk</button>
         <button type="button" class="btn btn-secondary w-100" onclick="window.location.href='register.html'">Daftar Sekarang</button>
       </form>
     </div>
