--- a/user/beranda.html
+++ b/user/beranda.html
@@ -227,7 +227,8 @@
         </div>
         <div class="offcanvas-body">
             <div class="d-grid gap-3">
-                <a href="feedback.html" class="btn btn-light d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#modalFeedback">
+                <a href="feedback.html" class="btn btn-light d-flex align-items-center" data-bs-toggle="modal"
+                    data-bs-target="#modalFeedback">
                     <img src="../assets/icon/review.png" width="20" class="me-2">
                     <span class="fw-bold" style="font-size: 14px; font-weight: 900;">Kirim Masukan</span>
                 </a>
@@ -246,7 +247,8 @@
         <button class="btn btn-secondary border-0 mb-4" id="collapseBtn">
             <img id="sidebarLogo" src="../assets/logo/logo_transfit.png" alt="Logo" width="150">
         </button>
-        <a href="feedback.html" class="btn btn-light d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#modalFeedback">
+        <a href="feedback.html" class="btn btn-light d-flex align-items-center" data-bs-toggle="modal"
+            data-bs-target="#modalFeedback">
             <img src="../assets/icon/review.png" width="35" class="me-2">
             <span class="sidebar-label fw-bold" style="font-size: 14px;">Kirim Masukan</span>
         </a>
@@ -272,7 +274,7 @@
             <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modalBooking">
                 <i class="bi bi-calendar"></i> Booking Jadwal
             </button>
-            <button class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#modalQRCode">
+            <button class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#modalkamera">
                 <i class="bi bi-qr-code-scan"></i> Scan QR
             </button>
 
@@ -395,12 +397,26 @@
                                 ✅ Melakukan SCAN Barcode Ketika Masuk GYM TransFit
                             </li>
                         </ul>
-                        <button class="btn btn-dark mt-3 px-4" data-bs-dismiss="modal">OKE</button>
+                        <button class="btn btn-dark mt-3 px-4" data-bs-dismiss="modal">Oke</button>
                     </div>
                 </div>
             </div>
         </div>
-
+        <!-- Modal Scan QR -->
+        <div class="modal fade" id="modalkamera" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content text-center p-4">
+                    <div class="modal-header border-0">
+                        <h5 class="modal-title">Scan QR Code</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div id="reader" style="width: 100%; max-width: 400px; margin: auto;"></div>
+                        <div id="hasilScan" class="mt-3 fw-bold text-success"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Tabel Jadwal Saya -->
         <div class="table-responsive">
             <table id="tabel-jadwal-saya" class="table table-bordered text-center align-middle">
@@ -463,15 +479,13 @@
                 dateFormat: "d-m-Y"
             });
         </script>
+        <!-- Script -->
+        <script src="https://unpkg.com/html5-qrcode"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+        <script src="beranda.js"></script>
 </body>
 
 </html>
-
-
-
-
-<!-- Script -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-<script src="beranda.js"></script>
