--- a/user/beranda.html
+++ b/user/beranda.html
@@ -334,22 +334,23 @@
             </div>
         </div>
 
-        <!-- Modal QR Code -->
-        <div class="modal fade" id="modalQRCode" tabindex="-1">
-            <div class="modal-dialog modal-sm modal-dialog-centered">
-                <div class="modal-content text-center">
-                    <div class="modal-header">
-                        <h5 class="modal-title">QR Code</h5>
+        <!-- Modal Kamera QR -->
+        <div class="modal fade" id="modalkamera" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content text-center p-4">
+                    <div class="modal-header border-0">
+                        <h5 class="modal-title">Scan QR Code</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
                     <div class="modal-body">
-                        <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=TransFit" alt="QR Code"
-                            class="img-fluid" />
-                        <p class="mt-2 mb-0">Scan untuk melakukan Check-in</p>
+                        <video id="video-webcam" width="100%" height="auto" autoplay></video>
+                        <div id="hasilScan" class="mt-3 fw-bold text-success"></div>
                     </div>
                 </div>
             </div>
         </div>
+        
+
         <div>
             <h3 class="fw-bold mt-5" style="font-size: 20px;">Jadwal Saya</h3>
         </div>
@@ -402,7 +403,7 @@
                 </div>
             </div>
         </div>
-        <!-- Modal Scan QR -->
+        <!-- Modal Kamera QR -->
         <div class="modal fade" id="modalkamera" tabindex="-1">
             <div class="modal-dialog modal-dialog-centered modal-lg">
                 <div class="modal-content text-center p-4">
@@ -480,12 +481,14 @@
             });
         </script>
         <!-- Script -->
+        <!-- Library HTML5 QR Code -->
         <script src="https://unpkg.com/html5-qrcode"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
         <script src="beranda.js"></script>
+
 </body>
 
 </html>
