--- a/user/beranda.html
+++ b/user/beranda.html
@@ -343,13 +343,14 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
                     <div class="modal-body">
+                        <div id="reader" style="width: 100%; max-width: 500px; margin: auto;"></div>
                         <video id="video-webcam" width="100%" height="auto" autoplay></video>
                         <div id="hasilScan" class="mt-3 fw-bold text-success"></div>
                     </div>
                 </div>
             </div>
         </div>
-        
+
 
         <div>
             <h3 class="fw-bold mt-5" style="font-size: 20px;">Jadwal Saya</h3>
