--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <div class="dashboard-title fw-bold" style="font-size: 28px;">Dashboard.</div>
-                    <div><strong class="fw-bold">Sabtu, 28 Juni 2025</strong></div>
+                    <div><strong class="fw-bold">Kamis, 3 Juli 2025</strong></div>
                 </div>
 
                 <div class="mb-5">
