--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                     <p class="mb-1" style="font-size: 12px;"><strong
                                             style="font-size: 36px; color: #2B2A64; font-weight: 700;">25</strong>Barang
                                     </p>
-                                    <small>Tersedia: 21 | Rusak: 2 | Perbaikan: 2</small><br>
+                                    <small>Tersedia: 23 | Rusak: 2 | Perbaikan: 2</small><br>
                                     <a href="#" class="btn btn-sm btn-outline-dark mt-2" style="width: 100%;"><i
                                             class="bi bi-gear p-2"></i>Kelola Inventaris</a>
                                 </div>
@@ -330,7 +330,8 @@
             updateMainContentMargin();
         });
 
-
+        // Set margin awal saat load
+        updateMainContentMargin();
 
         // Initialize the datepicker when the DOM is ready
         $(document).ready(function () {
