--- a/index.html
+++ b/index.html
@@ -11,22 +11,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
         rel="stylesheet">
-
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            margin: 0;
+            /* No background image or color specified here in the given snippet, keeping it as is */
         }
 
         .sidebar-toggle {
-            position: fixed;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            width: 250px;
-            background-color: #292D32;
-            z-index: 1030;
             transition: width 0.3s;
+            width: 250px;
+
         }
 
         .sidebar-toggle.collapsed {
@@ -58,16 +52,6 @@
             margin-right: 0 !important;
         }
 
-        .main-content {
-            margin-left: 250px;
-            transition: margin-left 0.3s;
-            padding: 1.5rem;
-        }
-
-        .sidebar-toggle.collapsed ~ .main-content {
-            margin-left: 85px;
-        }
-
         .table th,
         .table td {
             vertical-align: middle;
@@ -96,18 +80,12 @@
             color: #fff;
             border-color: #292D32;
         }
-
-        .card:hover {
-            transform: translateY(-5px);
-        }
-
+    .card:hover {
+      transform: translateY(-5px);
+    }
         @media (max-width: 767px) {
             .sidebar-toggle {
                 display: none;
-            }
-
-            .main-content {
-                margin-left: 0 !important;
             }
 
             #dateFilterGroup button {
@@ -119,12 +97,13 @@
                 flex-direction: column;
                 align-items: flex-start !important;
                 text-align: left;
-                width: 100% !important;
+                 width: 100% !important
+               ;
             }
 
             .card-body img {
                 margin-bottom: 1rem;
-                width: 10% !important;
+                 width: 10% !important
             }
 
             .card .btn {
@@ -155,44 +134,6 @@
 
 <body>
 
-    <div id="sidebarToggle" class="sidebar-toggle d-none d-md-flex flex-column p-2">
-        <button class="btn btn-secondary border-0 mb-4" id="collapseBtn">
-            <img id="sidebarLogo" src="assets/logo/logo_transfit.png" alt="Logo" width="150">
-        </button>
-
-        <a href="data/data_pengunjung.html" class="btn btn-light text-dark d-flex align-items-center mb-3">
-            <img src="assets/icon/date.svg" width="35" class="me-2">
-            <span class="sidebar-label fw-bold" style="font-size: 14px;">Data Pengunjung</span>
-        </a>
-
-        <a href="data/data_inventaris.html" class="btn btn-light text-dark d-flex align-items-center mb-3">
-            <img src="assets/icon/dumbell.svg" width="35" class="me-2">
-            <span class="sidebar-label fw-bold" style="font-size: 14px;">Data Inventaris</span>
-        </a>
-
-        <a href="auth/login.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
-            <img src="assets/icon/LogoutIcon.svg" width="35" class="me-2">
-            <span class="sidebar-label fw-bold" style="font-size: 14px;">Keluar</span>
-        </a>
-    </div>
-
-    <div class="main-content">
-        <button class="btn btn-outline-secondary d-md-none mb-3" data-bs-toggle="offcanvas"
-            data-bs-target="#sidebarOffcanvas">
-            <i class="bi bi-list"></i>
-        </button>
-
-        <div class="d-flex justify-content-between align-items-center mb-3">
-            <div class="dashboard-title fw-bold" style="font-size: 28px;">Dashboard.</div>
-            <div><strong class="fw-bold">Kamis, 3 Juli 2025</strong></div>
-        </div>
-
-        <!-- Konten dashboard & tabel -->
-        <!-- (Kamu bisa lanjutkan sisanya dari kode aslimu di sini...) -->
-
-    </div>
-
-    <!-- Offcanvas untuk mobile -->
     <div class="offcanvas offcanvas-start" tabindex="-1" id="sidebarOffcanvas" aria-labelledby="sidebarOffcanvasLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">Menu</h5>
@@ -200,7 +141,7 @@
         </div>
         <div class="offcanvas-body">
             <div class="d-grid gap-3">
-                <a href="data/data_pengunjung.html" class="btn btn-light d-flex align-items-center">
+                <a href="data/data_pengunjung.html" role="button" class="btn btn-light d-flex align-items-center">
                     <img src="assets/icon/date.svg" width="20" class="me-2">
                     <span class="fw-bold">Data Pengunjung</span>
                 </a>
@@ -208,21 +149,176 @@
                     <img src="assets/icon/dumbell.svg" width="20" class="me-2">
                     <span class="fw-bold">Data Inventaris</span>
                 </a>
-                <a href="auth/login.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
+                  <a href="auth/login.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
                     <img src="assets/icon/LogoutIcon.svg" width="20" class="me-2">
-                    <span class="fw-bold" style="font-size: 14px;">Keluar</span>
+                    <span class="sidebar-label" style="font-size: 14px; font-weight: 900;">Keluar</span>
                 </a>
             </div>
         </div>
     </div>
 
-    <!-- Script -->
+    <div class="container-fluid">
+        <div class="row">
+
+            <div id="sidebarToggle" class="sidebar-toggle col-md-2 d-none d-md-flex flex-column p-2"
+                style="background-color: #292D32; min-height: 100vh;">
+                <button class="btn btn-secondary border-0 mb-4" id="collapseBtn">
+                    <img id="sidebarLogo" src="assets/logo/logo_transfit.png" alt="Logo" width="150">
+                </button>
+
+                <a href="data/data_pengunjung.html" role="button"
+                    class="btn btn-light text-dark d-flex align-items-center mb-3">
+                    <img src="assets/icon/date.svg" width="35" class="me-2">
+                    <span class="sidebar-label" style="font-size: 14px; font-weight: 900; ">Data Pengunjung</span>
+                </a>
+
+                <a href="data/data_inventaris.html" class="btn btn-light text-dark d-flex align-items-center mb-3">
+                    <img src="assets/icon/dumbell.svg" width="35" class="me-2">
+                    <span class="sidebar-label" style="font-size: 14px; font-weight: 900; ">Data Inventaris</span>
+                </a>
+                <a href="auth/login.html" class="btn btn-light text-dark d-flex align-items-center mt-auto mb-3">
+                    <img src="assets/icon/LogoutIcon.svg" width="35" class="me-2">
+                    <span class="sidebar-label" style="font-size: 14px; font-weight: 900;">Keluar</span>
+                </a>
+
+            </div>
+
+            <div class="col-md-9 col-sm-12 p-4">
+                <button class="btn btn-outline-secondary d-md-none mb-3" data-bs-toggle="offcanvas"
+                    data-bs-target="#sidebarOffcanvas">
+                    <i class="bi bi-list"></i> </button>
+
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                    <div class="dashboard-title fw-bold" style="font-size: 28px;">Dashboard.</div>
+                    <div><strong class="fw-bold">Kamis, 3 Juli 2025</strong></div>
+                </div>
+
+                <div class="mb-5">
+                    <div class="d-flex flex-wrap gap-2 justify-content-center" id="dateFilterGroup">
+                        <button type="button" class="btn btn-outline-dark border-0 shadow-sm px-3"
+                            style="min-width: 70px; height: 45px; border-radius: 20px 0 0 20px;">Hari Ini</button>
+
+                        <button type="button" class="btn btn-outline-dark border-0 shadow-sm px-3"
+                            style="min-width: 70px; height: 45px;">Besok</button>
+
+                        <button type="button" class="btn btn-outline-dark border-0 shadow-sm px-3"
+                            style="min-width: 70px; height: 45px;">7 Hari</button>
+
+                        <button type="button" class="btn btn-outline-dark border-0 shadow-sm px-3"
+                            style="min-width: 70px; height: 45px;">30 Hari</button>
+
+                        <button type="button" class="btn btn-outline-dark border-0 shadow-sm px-3"
+                            style="min-width: 70px; height: 45px;">1 Tahun</button>
+
+                        <button type="button"
+                            class="btn btn-outline-dark border-0 shadow-sm d-flex align-items-center justify-content-center gap-1"
+                            style="min-width: 70px; height: 45px; border-radius: 0 20px 20px 0;">
+                            <i class="bi bi-calendar-event"></i><span>Lihat Kalender</span>
+                        </button>
+
+                        <input type="text" id="datepickerInput" class="d-none">
+                    </div>
+                </div>
+
+
+                <div class="row mb-1 " style="width: 170%;">
+                    <div class="col-md-4 mb-1 pd-3">
+                        <div class="card shadow-sm">
+                            <div class="card-body d-flex align-items-center">
+                                <img src="assets/icon/total_pengunjung.svg" width="85px" class="card-icon me-4 mb-2"
+                                    alt="Total Pengunjung">
+                                <div>
+                                    <h5 style="font-size: 16px;">Total Pengunjung</h5>
+                                    <p class="mb-1" style="font-size: 12px;"><strong
+                                            style="font-size: 36px; color: #2B2A64; font-weight: 700;">30</strong>Orang
+                                    </p>
+                                    <small>Check-in: 25 | Pending: 5</small><br>
+                                    <a href="data/data_pengunjung.html" class="btn btn-sm btn-outline-dark mt-2"
+                                        style="width: 120%;"> <i class="bi bi-person p-2"></i>Detail Pengunjung</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-1 pd-3">
+                        <div class="card shadow-sm">
+                            <div class="card-body d-flex align-items-center">
+                                <img src="assets/icon/total_inventaris.svg" width="85px" class="card-icon me-4 mb-2"
+                                    alt="Total Inventaris">
+                                <div>
+                                    <h5 style="font-size: 16px;">Total Peralatan Gym</h5>
+                                    <p class="mb-1" style="font-size: 12px;"><strong
+                                            style="font-size: 36px; color: #2B2A64; font-weight: 700;">25</strong>Barang
+                                    </p>
+                                    <small>Tersedia: 23 | Rusak: 2 | Perbaikan: 2</small><br>
+                                    <a href="#" class="btn btn-sm btn-outline-dark mt-2" style="width: 100%;"><i
+                                            class="bi bi-gear p-2"></i>Kelola Inventaris</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="table-responsive mt-5">
+                    <table class="table table-striped align-middle text-center">
+                        <thead>
+                            <tr>
+                                <th>No.</th>
+                                <th>Nama</th>
+                                <th>Telepon</th>
+                                <th>Sesi</th>
+                                <th>Check-in</th>
+                                <th>Aksi</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Yudi</td>
+                                <td>08116065314</td>
+                                <td>1</td>
+                                <td>2025-06-25 9:30</td>
+                                <td><button class="btn btn-sm btn-outline-dark">Lihat</button></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Raihan</td>
+                                <td>08116065314</td>
+                                <td>1</td>
+                                <td>2025-06-25 9:30</td>
+                                <td><button class="btn btn-sm btn-outline-dark">Lihat</button></td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Candra</td>
+                                <td>08116065314</td>
+                                <td>2</td>
+                                <td>2025-06-25 9:30</td>
+                                <td><button class="btn btn-sm btn-outline-dark">Lihat</button></td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Maulana</td>
+                                <td>08116065314</td>
+                                <td>2</td>
+                                <td>2025-06-25 9:30</td>
+                                <td><button class="btn btn-sm btn-outline-dark">Lihat</button></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
     <script>
+         
+
         const sidebar = document.getElementById('sidebarToggle');
         const toggleBtn = document.getElementById('collapseBtn');
         const logo = document.getElementById('sidebarLogo');
@@ -231,23 +327,32 @@
             sidebar.classList.toggle('collapsed');
             logo.src = sidebar.classList.contains('collapsed') ? 'assets/logo/logo_dishub.png' : 'assets/logo/logo_transfit.png';
             logo.width = sidebar.classList.contains('collapsed') ? 50 : 150;
+            updateMainContentMargin();
         });
 
+        // Set margin awal saat load
+        updateMainContentMargin();
+
+        // Initialize the datepicker when the DOM is ready
         $(document).ready(function () {
             $('#datepickerInput').datepicker({
-                format: 'yyyy-mm-dd',
-                autoclose: true,
-                todayHighlight: true,
-                orientation: 'bottom auto'
+                format: 'yyyy-mm-dd', // Date format
+                autoclose: true,     // Close picker when date is selected
+                todayHighlight: true, // Highlight today's date
+                orientation: 'bottom auto' // Position the picker
+                // Add other options as needed
             });
 
+            // When the "Lihat Kalender" button is clicked, show the datepicker
             $('#lihatKalenderBtn').on('click', function () {
                 $('#datepickerInput').datepicker('show');
             });
 
+            // You can also get the selected date if needed
             $('#datepickerInput').on('changeDate', function () {
                 const selectedDate = $('#datepickerInput').val();
                 console.log('Selected Date:', selectedDate);
+                // You can use this date to filter your table, etc.
             });
         });
     </script>
